<resources>
    <string name="app_name">Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_stages">Edit Stages</string>

    <string name="edit_stages">" | Edit"</string>

    <string name="total_length">"Takes "</string>
    <string name="stage_length_separator">" in "</string>
    <string name="stage_count">" stages"</string>

    <string name="title_activity_timer">Timer</string>

    <string name="ask_timer_name_title">Create new timer</string>
    <string name="ask_timer_name_description">"Name: "</string>
    <string name="ask_timer_name_ok">CREATE</string>
    <string name="ask_timer_name_cancel">CANCEL</string>
    <string name="name_hint">Name</string>
    <string name="default_timer_name">New Timer</string>
    <string name="ok">OK</string>
    <string name="timer_rename">Rename timer</string>

    <string name="title_activity_stage">StageActivity</string>

    <string name="stage_n">"#"</string>
    <string name="pause_before">"Pause before: "</string>
    <string name="duration">"Duration: "</string>
    <string name="pause_after">"Pause after: "</string>

    <string name="ask_stage_name_title">Add new stage</string>
    <string name="stage_change_name">Change stage name</string>
    <string name="ask_stage_name_description">"Name: "</string>
    <string name="ask_stage_name_ok">ADD</string>
    <string name="ask_stage_name_cancel">CANCEL</string>
    <string name="default_stage_name">New Stage</string>

    <string name="stage_delete">DELETE</string>
    <string name="delete_title">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>

    <string name="next">"Next: "</string>

    <string name="add_stage_hint">Add stages</string>
    <string name="start">"Start"</string>
    <string name="pause">Pause</string>

    <string name="remaining">"Remaining: "</string>

    <string name="failed_start">Can\'t start this timer. Make sure there are some stages with duration longer than 0.</string>

    <string name="exit_timer_title">Are you sure you want to exit?</string>
    <string name="stop_first">Stop the timer before editing stages</string>
    <string name="title_activity_settings">Settings</string>

    <string name="change_color">Change Color</string>

    <string name="action_rename">Rename</string>

    <string name="edit_stage_warning">Editing stages will stop the timer. Continue?</string>

    <string name="deleted">"Deleted "</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
