<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="therustyknife.timer.Activity.TimerActivity">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_stages"
        android:orderInCategory="90"
        android:title="@string/action_edit_stages"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mode_edit_white_24dp"/>
    <item
        android:id="@+id/action_change_color"
        android:orderInCategory="95"
        android:title="@string/change_color"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_color_lens_white_24dp" />
    <item
        android:id="@+id/action_rename"
        android:orderInCategory="93"
        android:title="@string/action_rename"
        app:showAsAction="never"/>
</menu>
